--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,4 +16,39 @@
       color: #ffffff !important;
     }
   }
+
+  .signout__wrapper {
+    position: relative;
+    height: 48px;
+    width: 48px;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    .user__avatar {
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+    }
+    &:hover {
+      .avatar__dropdown {
+        opacity: 1;
+        transition-duration: 1s;
+      }
+    }
+    .avatar__dropdown {
+      position: absolute;
+      top: 48px;
+      right: 0px;
+      background: rgb(19, 19, 19);
+      border: 1px solid rgba(151, 151, 151, 0.34);
+      border-radius: 4px;
+      // box-shadow: rgb(0 0 0 / 50%) 0px 0px 18px 0px;
+      padding: 10px;
+      font-size: 14px;
+      letter-spacing: 3px;
+      width: 100px;
+      opacity: 0;
+    }
+  }
 }
