--- a/src/components/Retail/Retail.scss
+++ b/src/components/Retail/Retail.scss
@@ -1,7 +1,7 @@
 // fonts
 @import url('https://fonts.googleapis.com/css?family=Fredoka:300,regular,500,600,700');
 
-.wrapper {
+.retail__wrapper {
   font-family: 'Fredoka', sans-serif;
   margin-top: 50px;
   .start__text {
@@ -20,11 +20,23 @@
     width: 100px;
     border: 1px solid #f0c040;
   }
-  .color__box {
-    position: absolute;
-    right: 0;
-    background: #e6e6fa;
-    width: 300px;
-    height: 140px;
+  .box__one {
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 4px 4px 4px #eee;
+
+    .icon {
+      margin-top: 30px;
+      color: #000;
+      font-size: 25px;
+      cursor: pointer;
+      user-select: none;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        transform: scale(1.2);
+        color: brown;
+      }
+    }
   }
 }
